Add more components

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
   <app-root></app-root>
+  <app-view-profile></app-view-profile>
+  <app-sign-in></app-sign-in>
   <app-edit-profile></app-edit-profile>
 </body>
 </html>
